tests/integration/snapshots/integration__min_r_version__min_r_version_from_description_only-2.snap
---
source: tests/integration/min_r_version.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test.R [1:0] grepv Use `grepv(...)` instead of `grep(..., value = TRUE)`.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
.
